Prices displaying correctly, UI on mobile, and updates to CSS.. still working on deleting posts

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,46 @@ form > * {
 .mine {
   font-weight: bold;
 }
+
+body {
+  background-color: rgb(171, 172, 173);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+  
+  body > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+div > a {
+  display: flex;
+  flex-direction: row;
+  background-color: red;
+  padding : 1rem;
+  justify-content: space-around;
+}
+
+h1 > a {
+  background-color: black;
+  color: red;
+  text-decoration: none;
+}
+
+.nav {
+  flex: wrap;
+  flex-direction: row;
+}
+
+ul {
+  list-style-type: none;
+}
+
+@media(max-width: 800px) {
+  div { 
+    display: flex;
+    flex-direction: column;
+  }
+}
